--- a/ba_slider.html
+++ b/ba_slider.html
@@ -75,10 +75,10 @@
 </head>
 <body>
     <div class="ba-slider">
-        <img src="https://cdn.shopify.com/s/files/1/2985/6400/files/Before.png?v=1628794628" alt="before after slider by reid withrow">
+        <img src="https://cdn.shopify.com/s/files/1/2985/6400/files/after.png?v=1628794628" alt="before after slider by Devmamun">
       
         <div class="resize">
-          <img src="https://cdn.shopify.com/s/files/1/2985/6400/files/after.png?v=1628794628" alt="before-after slider by reid withrow">
+          <img src="https://cdn.shopify.com/s/files/1/2985/6400/files/Before.png?v=1628794628" alt="before-after slider by Devmamun">
         </div>
         <span class="handle"></span>
       </div>
