--- a/ba_slider.html
+++ b/ba_slider.html
@@ -8,7 +8,10 @@
     <style>
         @import "lesshat";
 
-.ba-slider {
+html::-webkit-scrollbar {
+    display: none;
+}
+  .ba-slider {
   position: relative;
   overflow: hidden;
 }
